--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,5 +1,11 @@
 $font: 'Lato', sans-serif
+$bgColor: #432a5e
+$tc1: #fbe134
+$tc2: #c4aec0
+$white: #ffffff
+$hrColor: #6e5b83
 
 body 
-    font-family: 100% $font
+    font-family: $font
+    background-color: $bgColor
     
