--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,3 @@
-/*
-
-Landing Zero theme - A free landing page theme from BootstrapZero
-http://www.bootstrapzero.com
-
-*/
-
-@import url(https://fonts.googleapis.com/css?family=Questrial);
-@import url(http://fonts.googleapis.com/css?family=Dancing+Script:700);
 
 html,
 body {
@@ -15,15 +6,17 @@ body {
 }
 
 body {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-    background-color: #282828;
-    color: #d3d3d3;
-    webkit-tap-highlight-color: #222;
+    font-family: 'Lato', sans-serif;
+    background-color: #432a5e;
+    color: #ffffff;
+    background-image: url('../images/component-bg.png');
+    background-repeat: no-repeat;
+    background-size:100%;
 }
 
 hr {
     max-width: 80px;
-    border-width: 3px;
+    border-width: 2px;
     opacity: 0.09;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -46,96 +39,45 @@ a:focus {
     outline: 0;
 }
 
-h1,h2,h3,h4,h5,h6 {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-}
-
 p {
     font-size: 17px;
     line-height: 1.7;
     margin-bottom: 20px;
 }
 
-.wide-space {
-    letter-spacing: 1.6px;
+.text-yellow {
+    color: #fbe134;
 }
 
-.icon-lg {
-    font-size: 50px;
-    line-height: 18px;
+.text-button {
+    color: #e9e6ec;
 }
 
-.bg-primary {
-    background-color: #333;
-}
-
-.bg-dark {
-    color: #eee;
-    background-color: #222;
-}
-
-.cursive {
-    font-family: 'Dancing Script', cursive;
-    text-transform: none;
-}
-
-.text-faded {
-    color: rgba(245,245,245,0.7);
-}
-
-.text-dark {
-    color: #111;
-}
-
-.text-primary {
-    color: #9c27b0;
-}
-
-.modal-content {
-    background-color: #1d1d1d;
-}
-
-section {
-    padding: 70px 0;
-}
-
-aside {
-    padding: 50px 0;
-}
-
-footer {
-    padding: 15px;
+.text-2 {
+    color: #c4aec0;
 }
 
 .no-padding {
     padding: 0;
 }
 
-.navbar-default {
+/* .navbar-default {
     border-color: rgba(35,35,35,.05);
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-    background-color: #222;
+    background-color: #341f4a;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
     transition: all .4s;
 }
 
 .navbar-header > .navbar-brand {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-    color: #9c27b0;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
     -moz-transition: padding .2s ease-in;
     transition: padding .2s ease-in;
 }
 
-.navbar-header > .navbar-brand:hover,
-.navbar-header > .navbar-brand:focus {
-    color: #8b27b0;
-}
-
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #181818;
+    background-color: #341f4a;
 }
 .navbar-default .navbar-toggle, .navbar-default .navbar-collapse {
     border-color: transparent;
@@ -164,7 +106,7 @@ footer {
 .navbar-default .nav>li.active>a:focus:hover
 {
     background-color: transparent;
-}
+} */
 
 
 @media(min-width:768px) {
@@ -233,12 +175,9 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-Slate-Stone-Xeromatic-1440x953.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    background-image: url('../images/banner-desktop.png');
+    background-repeat: no-repeat;
+    background-size:100%;
 }
 
 header .header-content {
@@ -492,8 +431,6 @@ fieldset[disabled] .btn-default.active {
 
 .btn {
     border: 0;
-    border-radius: 290px;
-    font-family: 'Helvetica Neue',Arial,sans-serif;
 }
 
 .btn-xl {
